--- a/design.css
+++ b/design.css
@@ -16,24 +16,30 @@
 	z-index:2;
 	position: fixed;
 	top: 10px;
-	margin:0px auto; 
-	
+	right: 0px;
+	width: 100%;
+	margin:0 auto; 	
 }
-
-ul{
-	list-style-type: none;
-	position: fixed;
-	margin: -10px;
+.nav{
+    border:1px solid #ccc;
+    border-width:1px 0;
+    list-style:none;
+    margin:0;
+    padding:0;
+    text-align:center;
+    top:0%;
 }
-
-li {
-	margin:0px auto;
+.links{
+    margin:0px auto;
 	display:inline;
 	border: 2px solid #000000;
 	font-family: Futura, serif;
-	color: #ffffff;
+	color: #b2beb5;
 	border-radius: 5px 5px;
-	background-color: #cc0323
-
+	background-color: #36454f;
+}
+.nav a{
+    display:inline-block;
+    padding:10px;
 }
 /*fontawesome,scrollspy(bootstrap)*/
