--- a/design.css
+++ b/design.css
@@ -61,8 +61,6 @@
 	background-color: blue;
 	height:100px;
 	width:100px;
-	/*margin: auto;*/
-	
-
+	margin: auto;
 }
 /*fontawesome,scrollspy(bootstrap)*/
