--- a/design.css
+++ b/design.css
@@ -9,6 +9,12 @@
 	padding-top: 15%;
 	margin: auto;
 }
+#caret {
+	color: #00EE00;
+	width: 100%;
+	text-align: center;
+	font-size: 3em;
+}
 .Greetings {
 	text-align:center;
 	color:blue;
