--- a/design.css
+++ b/design.css
@@ -14,6 +14,12 @@
 	width: 100%;
 	text-align: center;
 	font-size: 3em;
+	-webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 .Greetings {
 	text-align:center;
