--- a/design.css
+++ b/design.css
@@ -1,19 +1,50 @@
-#bg_img {
+/*#bg_img {
 	z-index: -1;
 	position: fixed;
-	bottom: 0px;
-	right: -9px;
-	/*margin: -7px 0px 0px -20px;*/
+	top: 0%;
+	left: 0%;
+	width:100%;
+	height:100%;
+}*/
+
+#background {
+	z-index: -1;
+	position: fixed;
+	background-color: black;
+	top: 0%;
+	left: 0%;
+	width: 100%;
+	height:100%;	
+}
+.fiberOptic {
+ background-color: transparent;
+ background-repeat: no-repeat;
+ overflow: hidden;
+ position: absolute;
+}
+.fiberOptic-vertical {
+ width: 10px;
+ height: 250px;
+}
+.fiberOptic-horizontal{
+ width: 250px;
+ height: 10px;
 }
 #intro{
 	padding-top: 15%;
 	margin: auto;
+	width: 75%;
 }
+
+/* auto typing segment--------------------------------------------------- */
 #caret {
 	color: #00EE00;
 	width: 100%;
 	text-align: center;
-	font-size: 3em;
+	font-size: 2.5em;
+	position: relative;
+	padding-top: -10px;
+	font-weight: bolder;
 	-webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -21,8 +52,21 @@
     -ms-user-select: none;
     user-select: none;
 }
-.Greetings {
-	text-align:center;
+#Greetings {
+	border: 2px solid blue;
+	text-align:left;
+	position: fixed;
+	color:white;
+	font-family: Consolas,serif;
+	font-size: 2.5em;
+    width: 100%;
+    margin: auto;
+    white-space:nowrap;
+    overflow:hidden;
+    -webkit-animation: type 5s steps(50, end);
+    animation: type 5s steps(50, end);
+    /*margin:auto;
+    text-align:center;
 	color:blue;
 	font-family: Consolas,serif;
     width: 100%;
@@ -30,15 +74,17 @@
     overflow:hidden;
     -webkit-animation: type 5s steps(50, end);
     animation: type 5s steps(50, end);
+    */
 }
 
 @keyframes type{
-    from { width: 0; }
+    from { width: 0; } 
 }
 
 @-webkit-keyframes type{
     from { width: 0; }
 }
+/*navigation bar------------------------------------------------------------- */
 #navbar {
 	z-index:2;
 	position: fixed;
