--- a/design.css
+++ b/design.css
@@ -43,8 +43,8 @@
 	text-align: center;
 	font-size: 2.5em;
 	position: relative;
-	padding-top: -10px;
 	font-weight: bolder;
+	padding-left: 0px;
 	-webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -53,7 +53,6 @@
     user-select: none;
 }
 #Greetings {
-	border: 2px solid blue;
 	text-align:left;
 	position: fixed;
 	color:white;
