--- a/design.css
+++ b/design.css
@@ -1,12 +1,3 @@
-/*#bg_img {
-	z-index: -1;
-	position: fixed;
-	top: 0%;
-	left: 0%;
-	width:100%;
-	height:100%;
-}*/
-
 #background {
 	z-index: -1;
 	position: fixed;
@@ -15,6 +6,12 @@
 	left: 0%;
 	width: 100%;
 	height:100%;	
+}
+#name {
+	padding-top:20%;
+	font-size: 3em;
+	color:#0963b7;
+	font-family: Elephant;
 }
 .fiberOptic {
  background-color: transparent;
@@ -34,6 +31,9 @@
 	padding-top: 15%;
 	margin: auto;
 	width: 75%;
+}
+body {
+	overflow: hidden;
 }
 
 /* auto typing segment--------------------------------------------------- */
