--- a/design.css
+++ b/design.css
@@ -13,20 +13,6 @@
 	color:#0963b7;
 	font-family: Elephant;
 }
-.fiberOptic {
- background-color: transparent;
- background-repeat: no-repeat;
- overflow: hidden;
- position: absolute;
-}
-.fiberOptic-vertical {
- width: 10px;
- height: 250px;
-}
-.fiberOptic-horizontal{
- width: 250px;
- height: 10px;
-}
 #intro{
 	padding-top: 15%;
 	margin: auto;
@@ -37,7 +23,7 @@ body {
 }
 
 /* auto typing segment--------------------------------------------------- */
-#caret {
+/*#caret {
 	color: #00EE00;
 	width: 100%;
 	text-align: center;
@@ -64,16 +50,6 @@ body {
     overflow:hidden;
     -webkit-animation: type 5s steps(50, end);
     animation: type 5s steps(50, end);
-    /*margin:auto;
-    text-align:center;
-	color:blue;
-	font-family: Consolas,serif;
-    width: 100%;
-    white-space:nowrap;
-    overflow:hidden;
-    -webkit-animation: type 5s steps(50, end);
-    animation: type 5s steps(50, end);
-    */
 }
 
 @keyframes type{
@@ -82,7 +58,7 @@ body {
 
 @-webkit-keyframes type{
     from { width: 0; }
-}
+}*/
 /*navigation bar------------------------------------------------------------- */
 #navbar {
 	z-index:2;
@@ -94,14 +70,12 @@ body {
 }
 .nav{/*something wrong with the nav bar when we hover over it. 
 	only supposed to widen, but it shifts vertically as well*/
-    
     border-width:1px 0;
     list-style:none;
     margin:0;
     padding:0;
     text-align:center;
     top:0%;
-
 }
 .links{
     margin:0px auto;
