--- a/design.css
+++ b/design.css
@@ -1,12 +1,4 @@
-#background {
-	z-index: -1;
-	position: fixed;
-	background-color: black;
-	top: 0%;
-	left: 0%;
-	width: 100%;
-	height:100%;	
-}
+
 #name {
 	padding-top:20%;
 	font-size: 3em;
@@ -21,7 +13,14 @@
 body {
 	overflow: hidden;
 }
-
+.highlighted {
+    -webkit-box-shadow: 0 0 25px #0963b7;
+    -moz-box-shadow: 0 0 25px #0963b7;
+    box-shadow: 0 0 25px #0963b7;
+}
+#landing {
+	text-shadow:0 0 0.4em #0963b7;
+}
 /* auto typing segment--------------------------------------------------- */
 /*#caret {
 	color: #00EE00;
@@ -77,28 +76,51 @@ body {
     text-align:center;
     top:0%;
 }
-.links{
-    margin:0px auto;
-	display:inline;
-	/*border: 2px solid #000000;*/
-	font-family: Futura, serif;
-	color: #b2beb5;
-	border-radius: 35%;
-	background-color: #36454f;
-	font-size: 1.15em;
+
+body {
+	background-color: #000;
+	text-align: center;
 }
-.links a{
-    display:inline-block;
-    text-decoration:none;
+
+.pulsor { 
+	display: inline-block; 
+	line-height: 50px; 
+	margin: 10px;
+	width: 50px; 
+	height: 50px; 
+	border-radius: 50%;
+	box-shadow: 0 0 3px #0099CC; 
+	background-color: #121212;
+	text-shadow: 0 0 5px #0099CC;
+	font-family: Futura, sans-serif;
+	font-size: 1.15em; 
+	font-weight: bold;
+	color: #0099CC;
+	text-align: center;   
+	cursor: pointer; 
 }
-.links>a:link {
+.pulsor:hover {
+    -webkit-animation: pulsate .8s infinite alternate;
+    -moz-animation: pulsate .8s infinite alternate;
+    -animation: pulsate .8s infinite alternate;
+}
+.pulsor>a:link {
     text-decoration:none;
     color:#b2beb5;
 }
-.links>a:hover {
-    color:white;
-}
-.links>a:visited {
+.pulsor>a:visited {
     color:#b2beb5;
+}
+@-webkit-keyframes pulsate {
+    from { box-shadow: 0 0 10px #0099CC; }
+    to { box-shadow: 0 0 25px #0099CC; }
+}
+@-moz-keyframes pulsate {
+    from { box-shadow: 0 0 10px #121212; }
+    to { box-shadow: 0 0 25px #0099CC; }
+}
+@keyframes pulsate {
+    from { box-shadow: 0 0 10px #121212; }
+    to { box-shadow: 0 0 25px #0099CC; }
 }
 /*fontawesome,scrollspy(bootstrap),hashdown*/
