just some notes

--- a/design.css
+++ b/design.css
@@ -123,4 +123,4 @@ body {
     from { box-shadow: 0 0 10px #121212; }
     to { box-shadow: 0 0 25px #0099CC; }
 }
-/*fontawesome,scrollspy(bootstrap),hashdown*/
+/*fontawesome,scrollspy(bootstrap),hashdown,parallax scrolling*/
