--- a/design.css
+++ b/design.css
@@ -1,9 +1,28 @@
 
 #name {
-	padding-top:20%;
+	padding-top:17.5%;
 	font-size: 3em;
 	color:#0963b7;
 	font-family: Elephant;
+	margin-bottom: 10px;
+	
+}
+#landing:hover {
+    -webkit-animation: fade .8s infinite alternate;
+    -moz-animation: fade .8s infinite alternate;
+    -animation: fade .8s infinite alternate;
+}
+@-webkit-keyframes fade {
+    from { opacity: 1; }
+    to { opacity: 0.2; }
+}
+@-moz-keyframes fade {
+    from { opacity: 1; }
+    to { opacity: 0.2; }
+}
+@keyframes fade {
+    from { opacity: 1; }
+    to { opacity: 0.2; }
 }
 #intro{
 	padding-top: 15%;
@@ -11,53 +30,11 @@
 	width: 75%;
 }
 body {
-	overflow: hidden;
-}
-.highlighted {
-    -webkit-box-shadow: 0 0 25px #0963b7;
-    -moz-box-shadow: 0 0 25px #0963b7;
-    box-shadow: 0 0 25px #0963b7;
-}
-#landing {
-	text-shadow:0 0 0.4em #0963b7;
-}
-/* auto typing segment--------------------------------------------------- */
-/*#caret {
-	color: #00EE00;
-	width: 100%;
+	/*overflow: hidden;*/
+	background-color: black;
 	text-align: center;
-	font-size: 2.5em;
-	position: relative;
-	font-weight: bolder;
-	padding-left: 0px;
-	-webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-#Greetings {
-	text-align:left;
-	position: fixed;
-	color:white;
-	font-family: Consolas,serif;
-	font-size: 2.5em;
-    width: 100%;
-    margin: auto;
-    white-space:nowrap;
-    overflow:hidden;
-    -webkit-animation: type 5s steps(50, end);
-    animation: type 5s steps(50, end);
 }
 
-@keyframes type{
-    from { width: 0; } 
-}
-
-@-webkit-keyframes type{
-    from { width: 0; }
-}*/
 /*navigation bar------------------------------------------------------------- */
 #navbar {
 	z-index:2;
@@ -67,8 +44,7 @@ body {
 	width: 100%;
 	margin:0 auto; 	
 }
-.nav{/*something wrong with the nav bar when we hover over it. 
-	only supposed to widen, but it shifts vertically as well*/
+.nav{
     border-width:1px 0;
     list-style:none;
     margin:0;
@@ -76,12 +52,6 @@ body {
     text-align:center;
     top:0%;
 }
-
-body {
-	background-color: #000;
-	text-align: center;
-}
-
 .pulsor { 
 	display: inline-block; 
 	line-height: 75px; 
@@ -123,4 +93,42 @@ body {
     from { box-shadow: 0 0 10px #121212; }
     to { box-shadow: 0 0 25px #0099CC; }
 }
+/*landing page*/
+#landing {
+	text-shadow:0 0 0.4em #0963b7;
+	height: 100%;
+	border: 2px solid white;
+}
+/*about me page*/
+.circular_frame {
+	margin: auto;
+	width: 275px;
+    height: 275px;
+    position: relative;
+    overflow: hidden;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+}
+.title{
+	padding-top:7%;
+	font-size: 3em;
+	color:#0963b7;
+	font-family: Elephant;
+	margin-bottom: 15px;
+}
+/*.promote {
+	cursor: pointer; 
+	box-shadow: 0 0 10px #0099CC;
+}
+
+.promote:hover {
+    -webkit-animation: pulsate .8s infinite alternate;
+    -moz-animation: pulsate .8s infinite alternate;
+    -animation: pulsate .8s infinite alternate;
+}*/
+
+
 /*fontawesome,scrollspy(bootstrap),hashdown,parallax scrolling*/
