--- a/design.css
+++ b/design.css
@@ -147,17 +147,25 @@ html {
     -o-transform: translate(-140%,0px);
     -moz-transform: translate(-140%,0px);
     transform: translate(-140%,0px);
+    /*position:absolute;*/
 }
-.who {
+/*.who {
 	width:100%;
 	margin:auto;
 	position:absolute
-}
+}*/
+
 .bio {
 	color:white;
-	margin:auto;
 	list-style: none;
 	display: inline;
+}
+#info {
+	width: 70%;
+	margin: auto;
+	float: right;
+	border: 1px solid white;
+	position: relative;
 }
 /*fontawesome (http://fortawesome.github.io/Font-Awesome/examples/)
 ,scrollspy(bootstrap),scrollpath,hashdown,parallax scrolling*/
