FINALLY VERTICALLY ALIGNED FONT AWESOME ICON IN NAV BAR
i have too many gray hairs from this

--- a/design.css
+++ b/design.css
@@ -57,6 +57,7 @@ body {
     text-align:center;
     top:0;
 }
+.fa-home { line-height: inherit;}
 .pulsor { 
 	display: inline-block; 
 	line-height: 4em; 
