--- a/design.css
+++ b/design.css
@@ -227,6 +227,9 @@ html {
 	width: 100%;
 	margin: auto;
 	display: inline-block;
+	list-style:none;
+    padding:0;
+    text-align:center;
 }
 
 .proj {
