--- a/design.css
+++ b/design.css
@@ -209,14 +209,31 @@ html {
 /*resume*/
 #download {
 	/*border-radius: 15%;*/
-	width: 7em;
-	height:3em;
-	border-bottom: 0.2em solid white;
-	border-left: 0.2em solid white;
-	background-color: #121212;
-	text-decoration: none;
+	/*width: 7em;
+	height:4em;*/
+	/*background-color: #121212;*/
+	
 	color:#0099CC;
-	font-size: 1.2em;
+	/*font-size: 1.2em;*/
+}
+#dlDesign { 
+	word-spacing:7.5px;
+	text-decoration: none;
+	display: inline-block; 
+	line-height: 2.5em; 
+	margin: 10px;
+	width: 10em; 
+	height: 2.5em; 
+	border-radius: 10px;
+	box-shadow: 0 0 3px #0099CC; 
+	background-color: #121212;
+	/*text-shadow: 0 0 5px #0099CC;*/
+	font-family: Futura, sans-serif;
+	font-size: 1.25em; 
+	font-weight: bold;
+	color: #0099CC;
+	text-align: center;   
+	cursor: pointer; 
 }
 #github {
 	margin-top: 75%; /*can't do percentages anymore, due to page expansion bug*/
