--- a/design.css
+++ b/design.css
@@ -142,9 +142,9 @@ body {
   	-o-transition: all 2s ease;
   	transition: all 2s ease;
 }
-html {
+/*html {
 	overflow: hidden;
-}
+}*/
 .promote:hover {
     -webkit-animation: pulsate .8s infinite alternate;
     -moz-animation: pulsate .8s infinite alternate;
@@ -192,7 +192,7 @@ html {
 }
 .fadeInfo  {
 	animation-name: fadeBio;
-	animation-duration: 2s;
+	animation-duration: 3s;
 }
 .permFadeIn {
 	opacity: 1 !important;
