--- a/design.css
+++ b/design.css
@@ -142,9 +142,12 @@ body {
   	-o-transition: all 2s ease;
   	transition: all 2s ease;
 }
-/*html {
-	overflow: hidden;
-}*/
+html {
+
+    overflow-x:hidden;
+
+	/*overflow: hidden;*/
+}
 .promote:hover {
     -webkit-animation: pulsate .8s infinite alternate;
     -moz-animation: pulsate .8s infinite alternate;
